--- a/pkg/bk-monitor-worker/bmw.yaml
+++ b/pkg/bk-monitor-worker/bmw.yaml
@@ -74,6 +74,7 @@ bk_api:
   stage: "prod"
   app_code: ""
   app_secret: ""
+  bcs_api_gateway_schema: ""
   bcs_api_gateway_host: ""
   bcs_api_gateway_port: 443
   bcs_api_gateway_token: ""
